Update UCU Innovators Hub backend - fixed student dashboard, updated branding from Mbale to UCU

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=5000
 NODE_ENV=development
-MONGO_URI=mongodb+srv://stanly:mbalehub@third.lsvrzp1.mongodb.net/mbale_innovators_hub?retryWrites=true&w=majority&appName=third
+MONGO_URI=mongodb+srv://stanly:mbalehub@third.lsvrzp1.mongodb.net/ucu_innovators_hub?retryWrites=true&w=majority&appName=third
 JWT_SECRET=your_super_secret_jwt_key_change_this_in_production
 JWT_EXPIRE=7d
 BCRYPT_ROUNDS=12
